--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "obsidian-dataview-functions",
   "version": "0.1.0",
   "description": "Javascript Functions created for Obsidian Dataview used in my Second Brain",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +12,5 @@
     "javascript"
   ],
   "author": "Reljod Oreta",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^5.3.3"
-  }
+  "license": "ISC"
 }
